# quant_competitions

./: 404.html  BUILD.bazel  MODULE.bazel  README.md  discover_and_test.sh  generate_build.py  generate_docs.py  index.html  mkdocs.yml  repair_monorepo.py  run_cpp_build.sh  run_python_build.sh  run_rust_build.sh  sitemap.xml
citadel/citadel-trading-comp/cpp/: CMakeLists.txt  Dockerfile  README.md
citadel/citadel-trading-comp/cpp/include/: api.hpp  bot.hpp  models.hpp  strategies.hpp
citadel/citadel-trading-comp/cpp/src/: api.cpp  bot.cpp  main.cpp  strategies.cpp
citadel/citadel-trading-comp/cpp/tests/: test_strategies.cpp
citadel/citadel-trading-comp/python/: Dockerfile  README.md  pyproject.toml
citadel/citadel-trading-comp/python/citadel_bot/: __init__.py  api.py  bot.py  main.py  models.py  strategies.py
citadel/citadel-trading-comp/python/tests/: test_strategies.py
citadel/citadel-trading-comp/rust/: Cargo.toml  Dockerfile  README.md
citadel/citadel-trading-comp/rust/src/: api.rs  bot.rs  lib.rs  main.rs  models.rs  strategies.rs
citadel/citadel-trading-comp/rust/tests/: test_strategies.rs
docs/: index.md  technical_spec.md
jane_street/electronic_trading_challenge/cpp/: CMakeLists.txt  Dockerfile  README.md
jane_street/electronic_trading_challenge/cpp/src/: bot.cpp  exchange.cpp  main.cpp  models.cpp  strategies.cpp
jane_street/electronic_trading_challenge/cpp/tests/: test_bot.cpp
jane_street/electronic_trading_challenge/python/: Dockerfile  README.md  pyproject.toml
jane_street/electronic_trading_challenge/python/tests/: test_bot.py
jane_street/electronic_trading_competition/cpp/: BUILD  CMakeLists.txt  Dockerfile  README.md
jane_street/electronic_trading_competition/cpp/src/: exchange_client.cpp  exchange_client.hpp  main.cpp  models.hpp  strategies.cpp  strategies.hpp
jane_street/electronic_trading_competition/cpp/tests/: test_strategies.cpp
jane_street/electronic_trading_competition/python/: BUILD  Dockerfile  README.md  pyproject.toml
jane_street/electronic_trading_competition/python/tests/: test_client.py  test_strategies.py
jane_street/electronic_trading_competition/rust/: BUILD  Cargo.toml  Dockerfile  README.md
jane_street/electronic_trading_competition/rust/src/: exchange_client.rs  main.rs  models.rs  strategies.rs
jane_street/market_prediction/: BUILD.bazel  MODULE.bazel  README.md  SOLUTIONS.md  export_params.py
jane_street/market_prediction/cpp/: CMakeLists.txt  Dockerfile  README.md
jane_street/market_prediction/cpp/src/: engine.cpp  main.cpp  models.cpp  preprocessor.cpp  scorer.cpp
jane_street/market_prediction/cpp/tests/: test_engine.cpp  test_models.cpp  test_preprocessor.cpp  test_scorer.cpp
jane_street/market_prediction/preprocessing/: params.json
jane_street/market_prediction/python/: Dockerfile  README.md  dummy_path  pyproject.toml
jane_street/market_prediction/python/tests/: conftest.py  test_cli.py  test_engine.py  test_models.py  test_preprocessor.py  test_scorer.py
jane_street/market_prediction/rust/: Cargo.toml  Dockerfile  README.md
jane_street/market_prediction/rust/src/: engine.rs  main.rs  models.rs  preprocessor.rs  scorer.rs
jane_street/trading_bot/cpp/: CMakeLists.txt  Dockerfile  README.md
jane_street/trading_bot/cpp/include/: bot.hpp  exchange.hpp  models.hpp  strategy.hpp
jane_street/trading_bot/cpp/src/: bot.cpp  exchange.cpp  main.cpp  strategy.cpp
jane_street/trading_bot/cpp/tests/: test_bot.cpp
jane_street/trading_bot/python/: Dockerfile  README.md  pyproject.toml
jane_street/trading_bot/python/tests/: test_bot.py
jane_street/trading_bot/python/trading_bot/: bot.py  cli.py  exchange.py  models.py  strategy.py
man/man_imperial_algothon_2026/: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  Dockerfile  README.md  WORKSPACE  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh
man/man_imperial_algothon_2026/.github/workflows/: ci.yml
man/man_imperial_algothon_2026/data/sample/: BUILD.bazel  cash_rate.csv  prices.csv  signals.csv  volumes.csv
man/man_imperial_algothon_2026/notebooks/: strategy_research.ipynb
man/man_imperial_algothon_2026/research/: algothon_research.tex
man/man_imperial_algothon_2026/scripts/: runner.py
man/man_imperial_algothon_2026/src/cpp/: BUILD.bazel
man/man_imperial_algothon_2026/submissions/: test_team_round_1.csv
man/man_imperial_algothon_2026/tests/cpp/: test_portfolio_engine.cpp
man/man_imperial_algothon_2026/tests/python/: test_all.py
two_sigma/financial_modeling_challenge/: BUILD.bazel  README.md  SOLUTIONS.md  WORKSPACE
two_sigma/financial_modeling_challenge/cpp/: CMakeLists.txt  Dockerfile  README.md
two_sigma/financial_modeling_challenge/cpp/include/: common.h  data_generator.h  environment.h  model.h
two_sigma/financial_modeling_challenge/cpp/src/: data_generator.cpp  environment.cpp  main.cpp  model.cpp
two_sigma/financial_modeling_challenge/cpp/tests/: test_solution.cpp
two_sigma/financial_modeling_challenge/python/: Dockerfile  README.md  pyproject.toml
two_sigma/financial_modeling_challenge/python/tests/: test_solution.py
two_sigma/financial_modeling_challenge/rust/: Cargo.toml  Dockerfile  README.md
two_sigma/financial_modeling_challenge/rust/src/: data_generator.rs  environment.rs  lib.rs  main.rs  model.rs
two_sigma/financial_modeling_challenge/rust/tests/: test_solution.rs
two_sigma/financial_modeling_challenge/scripts/: run_cpp.sh  run_python.sh  run_rust.sh  test_cpp.sh  test_python.sh  test_rust.sh
two_sigma/predicting_stock_using_news/cpp/: BUILD.bazel  CMakeLists.txt  Dockerfile  README.md
two_sigma/predicting_stock_using_news/cpp/src/: DataLoader.cpp  Evaluator.cpp  Interfaces.hpp  Model.cpp  Preprocessor.cpp  main.cpp
two_sigma/predicting_stock_using_news/cpp/tests/: test_two_sigma.cpp
two_sigma/predicting_stock_using_news/python/: BUILD.bazel  Dockerfile  README.md  pyproject.toml
two_sigma/predicting_stock_using_news/python/tests/: test_two_sigma.py
two_sigma/predicting_stock_using_news/rust/: BUILD.bazel  Cargo.toml  Dockerfile  README.md
(+104 files in other folders)
