load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

# --- Citadel ---
sh_test(
    name = "citadel_python",
    srcs = ["run_python_build.sh"],
    data = glob(["citadel/citadel-trading-comp/python/**"]),
    tags = ["python"],
)

sh_test(
    name = "citadel_cpp",
    srcs = ["run_cpp_build.sh"],
    data = glob(["citadel/citadel-trading-comp/cpp/**"]),
    tags = ["cpp"],
)

sh_test(
    name = "citadel_rust",
    srcs = ["run_rust_build.sh"],
    data = glob(["citadel/citadel-trading-comp/rust/**"]),
    tags = ["rust"],
)

# --- Jane Street ETC ---
sh_test(
    name = "jane_street_etc_python",
    srcs = ["run_python_build.sh"],
    data = glob(["jane_street/electronic_trading_challenge/python/**"]),
    tags = ["python"],
)

sh_test(
    name = "jane_street_etc_cpp",
    srcs = ["run_cpp_build.sh"],
    data = glob(["jane_street/electronic_trading_challenge/cpp/**"]),
    tags = ["cpp"],
)

sh_test(
    name = "jane_street_etc_rust",
    srcs = ["run_rust_build.sh"],
    data = glob(["jane_street/electronic_trading_challenge/rust/**"]),
    tags = ["rust"],
)

# --- Two Sigma FM ---
sh_test(
    name = "two_sigma_fm_python",
    srcs = ["run_python_build.sh"],
    data = glob(["two_sigma/financial_modeling_challenge/python/**"]),
    tags = ["python"],
)

sh_test(
    name = "two_sigma_fm_cpp",
    srcs = ["run_cpp_build.sh"],
    data = glob(["two_sigma/financial_modeling_challenge/cpp/**"]),
    tags = ["cpp"],
)

sh_test(
    name = "two_sigma_fm_rust",
    srcs = ["run_rust_build.sh"],
    data = glob(["two_sigma/financial_modeling_challenge/rust/**"]),
    tags = ["rust"],
)
