load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

# --- Automated Discovery Targets ---
# These targets will automatically find and build/test all projects
# within the monorepo matching the standard structure.

sh_test(
    name = "all_python_projects",
    srcs = ["discover_and_test.sh"],
    args = ["python"],
    data = glob(
        ["**/*"],
        exclude = ["bazel-*/**", ".git/**", "**/build/**", "**/target/**", "**/node_modules/**"]
    ),
    tags = ["python", "automated"],
)

sh_test(
    name = "all_cpp_projects",
    srcs = ["discover_and_test.sh"],
    args = ["cpp"],
    data = glob(
        ["**/*"],
        exclude = ["bazel-*/**", ".git/**", "**/build/**", "**/target/**", "**/node_modules/**"]
    ),
    tags = ["cpp", "automated"],
)

sh_test(
    name = "all_rust_projects",
    srcs = ["discover_and_test.sh"],
    args = ["rust"],
    data = glob(
        ["**/*"],
        exclude = ["bazel-*/**", ".git/**", "**/build/**", "**/target/**", "**/node_modules/**"]
    ),
    tags = ["rust", "automated"],
)
