module(
    name = "quant_competitions",
    version = "1.0.0",
)

# Fix version mismatches reported by Bazel
bazel_dep(name = "rules_python", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_rust", version = "0.56.0")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_shell", version = "0.3.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.13")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021", versions = ["1.93.1"])
