[tool.poetry]
name        = "algothon-2026"
version     = "1.0.0"
description = "Man Group Imperial Algothon 2026 – Quantitative Portfolio Strategy"
authors     = ["Algothon 2026 Team <algothon@example.com>"]
readme      = "README.md"
license     = "Apache-2.0"
packages    = [{ include = "src/python" }]

[tool.poetry.dependencies]
python          = "^3.13"

# Core scientific stack
numpy           = "^2.2"
polars          = "^1.20"
scipy           = "^1.15"
scikit-learn    = "^1.6"

# Portfolio & finance
cvxpy           = "^1.6"            # Convex optimisation fallback

# Plotting
plotly          = "^6.0"
matplotlib      = "^3.10"
seaborn         = "^0.13"
kaleido         = "^0.2"            # plotly static export

# Jupyter
jupyterlab      = "^4.3"
ipywidgets      = "^8.1"
nbformat        = "^5.10"

# Utilities
loguru          = "^0.7"
click           = "^8.1"
pydantic        = "^2.10"
rich            = "^13.9"
tqdm            = "^4.67"

[tool.poetry.group.dev.dependencies]
pytest          = "^8.3"
pytest-cov      = "^6.0"
ruff            = "^0.9"
mypy            = "^1.14"
black           = "^25.1"
pre-commit      = "^4.0"
hypothesis      = "^6.122"

[tool.poetry.scripts]
algothon        = "src.python.execution.engine:main"

[build-system]
requires        = ["poetry-core>=1.9"]
build-backend   = "poetry.core.masonry.api"

# ============================================================================
# Tool configurations
# ============================================================================

[tool.ruff]
line-length    = 100
target-version = "py313"
select         = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.mypy]
python_version         = "3.13"
strict                 = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths    = ["tests/python"]
addopts      = "-v --cov=src/python --cov-report=term-missing --cov-report=xml"

[tool.black]
line-length    = 100
target-version = ["py313"]
