[tool.poetry]
name        = "algothon-2026"
version     = "1.0.0"
description = "Algothon 2026 — Man Group × Imperial quantitative strategy engine"
authors     = ["Algothon 2026 Team"]
license     = "Proprietary"
readme      = "README.md"
python      = "^3.13"

# ---------------------------------------------------------------------------
# src-layout: all importable packages live under src/python/.
# After `poetry install`, the following top-level imports resolve without
# any sys.path manipulation:
#
#   from data.loader        import DataLoader
#   from signals.momentum   import MomentumEngine
#   from portfolio.optimizer import MVOOptimizer
#   from portfolio.risk      import PerformanceAnalytics
#   from execution.engine    import AlgothonEngine
# ---------------------------------------------------------------------------
packages = [
    { include = "data",      from = "src/python" },
    { include = "signals",   from = "src/python" },
    { include = "portfolio", from = "src/python" },
    { include = "execution", from = "src/python" },
]

[tool.poetry.dependencies]
python        = "^3.13"
numpy         = "^2.1"
polars        = "^1.9"
scipy         = "^1.14"
scikit-learn  = "^1.5"
loguru        = "^0.7"
rich          = "^13.9"
jupyterlab    = { version = "^4.3", optional = true }

[tool.poetry.extras]
jupyter = ["jupyterlab"]

[tool.poetry.group.dev.dependencies]
pytest        = "^8.3"
pytest-cov    = "^5.0"
ruff          = "^0.7"
mypy          = "^1.13"
black         = "^24.10"

[tool.poetry.scripts]
# Direct CLI entry-point: `poetry run algothon --backtest`
algothon = "execution.engine:main"

# ---------------------------------------------------------------------------
# Ruff (linter / formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py313"
src            = ["src/python", "tests/python", "scripts"]

[tool.ruff.lint]
select  = ["E", "F", "I", "N", "UP", "ANN", "PLC", "PLR", "PLW"]
ignore  = ["ANN101", "ANN102", "ANN401"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.13"
strict                 = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy.*", "sklearn.*", "polars.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths    = ["tests/python"]
addopts      = "--tb=short -v"
python_files = ["test_*.py"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length    = 100
target-version = ["py313"]

[build-system]
requires      = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"