sh_binary(
    name = "python_solution",
    srcs = ["scripts/run_python.sh"],
    data = glob(["python/**"]),
)

sh_binary(
    name = "cpp_solution",
    srcs = ["scripts/run_cpp.sh"],
    data = glob(["cpp/**"]),
)

sh_binary(
    name = "rust_solution",
    srcs = ["scripts/run_rust.sh"],
    data = glob(["rust/**"]),
)

sh_test(
    name = "python_tests",
    srcs = ["scripts/test_python.sh"],
    data = glob(["python/**"]),
)

sh_test(
    name = "cpp_tests",
    srcs = ["scripts/test_cpp.sh"],
    data = glob(["cpp/**"]),
)

sh_test(
    name = "rust_tests",
    srcs = ["scripts/test_rust.sh"],
    data = glob(["rust/**"]),
)
