[tool.poetry]
name = "citadel-bot"
version = "0.1.0"
description = "Trading bot for Citadel competition"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "citadel_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pydantic = "^2.8.2"
click = "^8.1.7"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
respx = "^0.21.1"

[tool.poetry.scripts]
citadel-bot = "citadel_bot.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
