[tool.poetry]
name = "market-prediction"
version = "0.1.0"
description = "Jane Street Market Prediction Python Solution"
authors = ["Jane Street"]
readme = "README.md"
packages = [{include = "market_prediction", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
numpy = "^1.26.4"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
torch = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
market-prediction = "market_prediction.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
